Added StockType field
